# studyassistant

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml
backend_v2/: .env.sample  .gitignore  .vercelignore  README.md  STREAMING_README.md  env.example  main.py  pyproject.toml  requirements.txt  vercel.json
backend_v2/aeva/: __init__.py  app.py  containers.py
backend_v2/aeva/admin/: __init__.py  admin_auth.py  admin_controller.py  admin_repository.py
backend_v2/aeva/analytics/: __init__.py  analytics_controller.py  analytics_repository.py
backend_v2/aeva/assistant/: assistant_controller.py  assistant_repository.py
backend_v2/aeva/auth/: auth_controller.py  auth_repository.py
backend_v2/aeva/bookmark/: __init__.py  bookmark_controller.py  bookmark_repository.py
backend_v2/aeva/chat/: chat_controller.py  chat_repository.py
backend_v2/aeva/common/: __init__.py  decorators.py  errors.py  logging_config.py
backend_v2/aeva/delay/: __init__.py  delay_controller.py  delay_repository.py
backend_v2/aeva/flashcard/: __init__.py  flashcard_controller.py  flashcard_repository.py
backend_v2/aeva/learning_profile/: __init__.py  learning_profile_controller.py  learning_profile_repository.py
backend_v2/aeva/llm/: llm_client.py  prompts.py
backend_v2/aeva/mcp/: __init__.py  base.py  registry.py
backend_v2/aeva/media/: attachments.py  chunking.py  compression.py  llamaparse_service.py  media_controller.py  media_processor.py  media_repository.py
backend_v2/aeva/orchestration/: assistant_orchestrator.py  models.py
backend_v2/api/: index.py
backend_v2/app/: __init__.py
backend_v2/init.sql/: create_users_table.sql
(+252 files in other folders)
